--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
 				<p id="status"></p>
 			</div>
 
+			<label>Choose a browser from this list:
+				<input list="browsers" name="myBrowser" /></label>
+				<datalist id="browsers">
+				  <option value="Chrome">
+				  <option value="Firefox">
+				  <option value="Internet Explorer">
+				  <option value="Opera">
+				  <option value="Safari">
+				  <option value="Microsoft Edge">
+				</datalist>
+
 			<input type="text" id="search" placeholder="Search for asset">
 			<br>
 			<a href="#" id="visualize" class="btn btn-primary">Visualize/Compare</a>
