--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 		<script src="jquery-3.5.1.min.js"></script>
 		<script src="https://www.gstatic.com/charts/loader.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<style>
+			.card1{
+		border-color: rgb(13, 110, 253);
+		box-shadow: 0px 0px 6px 1px rgb(13, 110, 253);
+		width: 8rem;
+			}
+			.card2{
+		border-color: rgba(13, 110, 253, 0.5);
+		box-shadow: 0px 0px 2px 1px rgba(13, 110, 253, 0.5);
+		width: 8rem;
+			}
+		</style>
 	</head>
 	
 	<body>
@@ -19,19 +31,13 @@
 			<hr>
 			
 			<div class="container text-left">
-				Asset1: <select name="x" id="x">
-					<option value="AMD">AMD</option>
-					<option value="NVDA">Nvidia</option>
-					<option value="AMC">AMC</option>
-					<option value="TSLA">Tesla</option>
-				</select>
+				<label name="x" id="x" class="card1">
+				Asset1: 
+				</label>
 				<br>
-				Asset2:  <select name="y" id="y">
-					<option value="AMD">AMD</option>
-					<option value="NVDA">Nvidia</option>
-					<option value="AMC">AMC</option>
-					<option value="TSLA">Tesla</option>
-				</select> 
+				<label name="y" id="y" class="card2">
+				Asset2:	
+				</label>
 				<br>
 				Function:  <select name="z" id="z">
 					<option value="function=TIME_SERIES_DAILY&">Daily</option>
@@ -42,18 +48,15 @@
 				<p id="status"></p>
 			</div>
 
-			<label>Choose a browser from this list:
-				<input list="browsers" name="myBrowser" /></label>
-				<datalist id="browsers">
-				  <option value="Chrome">
-				  <option value="Firefox">
-				  <option value="Internet Explorer">
-				  <option value="Opera">
-				  <option value="Safari">
-				  <option value="Microsoft Edge">
+				<input list="tickers" id="search" placeholder="Search for asset"/>
+				<datalist id="tickers">
+					<option value="AMD">Advanced Micro Devices</option>
+					<option value="NVDA">Nvidia</option>
+					<option value="AMC">AMC Meme Stocks International</option>
+					<option value="TSLA">Tesla</option>
 				</datalist>
 
-			<input type="text" id="search" placeholder="Search for asset">
+			<!--. <input type="text" id="search" placeholder="Search for asset"> -->
 			<br>
 			<a href="#" id="visualize" class="btn btn-primary">Visualize/Compare</a>
 			<br>
