--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 								</thead>
 								<tbody id="table-body">
 									<tr>
-										<td><span class="dpsym">Daily</span></td>
-										<td><span class="dpsym">BTCUSDT</span></td>
-										<td><span class="dpaon">Price</span></td>
-										<td><span class="dpcurtype">USDT</span></td>
-										<td><span class="dpcond">Greater Than</span></td>
+										<td><span class="dpsym">DAILY</span></td>
+										<td><span class="dpsym">BTC</span></td>
+										<td><span class="dpaon">USD</span></td>
+										<td><span class="dpcurtype">100</span></td>
+										<td><span class="dpcond">50%</span></td>
 									</tr>
 								</tbody>
 							</table>
