--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Correlation Visualizer 2</title>
 		<meta charset="utf-8">
-		<script src="jquery-3.5.1.min.js"></script>
+		<script src="jquery-3.7.0.min.js"></script>
 		<script src="https://www.gstatic.com/charts/loader.js"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="stylesheet" href="popout.css">
@@ -91,6 +91,7 @@
 							<table id="dptable" class="table table-striped table-hover table-sm">
 								<thead>
 									<tr>
+										<th>Date</th>
 										<th>Period</th>
 										<th>Symbol 1</th>
 										<th>Symbol 2</th>
@@ -100,6 +101,7 @@
 								</thead>
 								<tbody id="table-body">
 									<tr>
+										<td><span class="dpsym">TODAY</span></td>
 										<td><span class="dpsym">DAILY</span></td>
 										<td><span class="dpsym">BTC</span></td>
 										<td><span class="dpaon">USD</span></td>
