--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								Asset1: <label name='child'> TSLA </label>
 								</label> 
 								<div class="col d-flex justify-content-left">
-									<label id="dsc1" class="boss2"><spaN>&nbsp &nbsp &nbsp Tesla, Inc</spaN></label>
+									<label id="dsc1" class="boss2"><spaN>Tesla, Inc - US Equity</spaN></label>
 								</div> 
 							</div>
 
@@ -52,7 +52,7 @@
 								Asset2: <label name='child'> GOLD </label>
 								</label>
 								<div class="col d-flex justify-content-left">
-									<label id="dsc2" class="boss2"><spaN>&nbsp &nbsp &nbsp Barrick Gold Corporation</spaN></label>
+									<label id="dsc2" class="boss2"><spaN>Barrick Gold Corporation - US Equity</spaN></label>
 								</div>
 			
 							</div>
@@ -100,7 +100,7 @@
 									</tr>
 								</thead>
 								<tbody id="table-body">
-									<tr>
+									<tr class="all-rows" id="row1">
 										<td><span class="dpsym">TODAY</span></td>
 										<td><span class="dpsym">DAILY</span></td>
 										<td><span class="dpsym">BTC</span></td>
@@ -127,10 +127,10 @@
 				<input list="tickers" id="search" placeholder="Search for asset"/>
 
 				<datalist id="tickers">
-					<option value="AMD" id="AMD">Advanced Micro Devices</option>
-					<option value="NVDA" id="NVDA">Nvidia</option>
-					<option value="AMC" id="AMC">AMC Meme Stocks International</option>
-					<option value="TSLA" id="TSLA">Tesla</option>
+					<option value="AMD" id="AMD">Advanced Micro Devices - US Equity</option>
+					<option value="NVDA" id="NVDA">Nvidia - US Equity</option>
+					<option value="AMC" id="AMC">AMC Meme Stocks International - US Equity</option>
+					<option value="TSLA" id="TSLA">Tesla Inc - US Equity</option>
 				</datalist>
 
 			<!--. <input type="text" id="search" placeholder="Search for asset"> -->
