added Pearson correlation

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 										<th>Symbol 1</th>
 										<th>Symbol 2</th>
 										<th>Score</th>
-										<th>% of divergence</th>
+										<th>% divergence</th>
+										<th>Pearson</th>
 									</tr>
 								</thead>
 								<tbody id="table-body">
@@ -115,6 +116,7 @@
 										<td><span class="dpsym">BTC</span></td>
 										<td><span class="dpaon">USD</span></td>
 										<td><span class="dpcurtype">100</span></td>
+										<td><span class="dpcond">50%</span></td>
 										<td><span class="dpcond">50%</span></td>
 									</tr>
 									
