--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 							<div class="row text-center mt-4">
 								&nbsp &nbsp &nbsp &nbsp
 								<label name="xy" id="x" class="card1 col-lg-3 d-flex justify-content-center boss2">
-								Asset1: <label name='child'> TSLA </label>
+								Asset1: <label name='child' class="bbold"> TSLA </label>
 								</label> 
 								<div class="col d-flex justify-content-left">
-									<label id="dsc1" class="boss2"><spaN>Tesla, Inc - US Equity</spaN></label>
+									<label id="dsc1" class=""><spaN>Tesla, Inc - US Equity</spaN></label>
 								</div> 
 							</div>
 
@@ -49,10 +49,10 @@
 
 								&nbsp &nbsp &nbsp &nbsp
 								<label name="xy" id="y" class="card4 col-lg-3 d-flex justify-content-center boss2">
-								Asset2: <label name='child'> GOLD </label>
+								Asset2: <label name='child' class="bbold"> GOLD </label>
 								</label>
 								<div class="col d-flex justify-content-left">
-									<label id="dsc2" class="boss2"><spaN>Barrick Gold Corporation - US Equity</spaN></label>
+									<label id="dsc2" class=""><spaN>Barrick Gold Corporation - US Equity</spaN></label>
 								</div>
 			
 							</div>
