--- a/index.html
+++ b/index.html
@@ -59,14 +59,6 @@
 
 							<div class="row text-center my-4">
 								&nbsp &nbsp &nbsp
-								<div class="col-lg-3 d-flex justify-content-center">
-									<label class="form-check-label boss" id="PERC" for="flexSwitchCheckDefault">%PERC &nbsp</label>
-									<div class="form-check form-switch">
-										<input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-									</div>
-									<label class="form-check-label demotext" id="ABS" for="flexSwitchCheckDefault">$ABS</label>
-								</div>
-
 								<div class="col-lg-4 d-flex">
 									<select name="z" id="z" class="hover" >
 										<option value="function=TIME_SERIES_WEEKLY&">Weekly</option>
@@ -75,6 +67,18 @@
 									</select>  
 									<div id="tstx" class="demotext"><span>&nbsp Time</span><span> Frame </span></div>
 									
+								</div>
+
+							</div>
+
+							<div class="row text-center my-4">
+								&nbsp &nbsp &nbsp
+								<div class="col-lg-3 d-flex justify-content-center">
+									<label class="form-check-label boss" id="PERC" for="flexSwitchCheckDefault">%PERC &nbsp</label>
+									<div class="form-check form-switch">
+										<input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+									</div>
+									<label class="form-check-label demotext" id="ABS" for="flexSwitchCheckDefault">$ABS</label>
 								</div>
 
 							</div>
